force-app/main/default/objects/Technology__c/fields/project_technology_add__c.field-meta.xml
<CustomField>
    <fullName>project_technology_add__c</fullName>
    <description>roll-up summary for add</description>
    <label>project technology add</label>
    <summaryForeignKey>Project_Technology__c.Technology__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>