force-app/main/default/objects/Technology__c/fields/Project_Technology_sum__c.field-meta.xml
<CustomField>
    <fullName>Project_Technology_sum__c</fullName>
    <description>roll-up summary field that sum up</description>
    <label>Project Technology sum</label>
    <summarizedField>Project_Technology__c.Average_Rating__c</summarizedField>
    <summaryForeignKey>Project_Technology__c.Technology__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>